--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </label>
 
         <ul class="menu">
-            <li class="item"><a href="../inicio/index.html">INICIO</a></li>
+            <li class="item"><a href="../inicio/index.html">INICIOOO</a></li>
             <li class="item"><a href="../quienes_somos/pagina1.html">QUIENES SOMOS</a></li>
             <li class="item"><a href="https://drive.google.com/drive/folders/1q-77ouyQ2p76ffGYcYd1CrvYAV-Xftyr?usp=drive_link" target="_blank" >BIBLIOTECA</a></li>
             <li class="item"><a href="../noticia/index.html"  >NOTICIA</a></li>
