--- a/inicio/index.html
+++ b/inicio/index.html
@@ -49,7 +49,7 @@
                 
                     <li><img src="imagenes/1.jpg"   alt=""></li>
                     <li><img src="imagenes/AUX8.jpg"  alt=""></li>
-                    <li><img src="imagenes/familia.jpg"  alt=""></li>
+                    <li><img src="imagenes/familia-min.jpg"  alt=""></li>
                     <li><img src="imagenes/3.jpg "  alt=""></li>
                 
             </ul>
