--- a/inicio/index.html
+++ b/inicio/index.html
@@ -47,8 +47,8 @@
         <div class="slider-frame">
             <ul>
                 
-                    <li><img src="imagenes/1.jpg"   alt=""></li>
-                    <li><img src="imagenes/AUX8.jpg"  alt=""></li>
+                    <li><img src="imagenes/1-min.jpg"   alt=""></li>
+                    <li><img src="imagenes/AUX8-min.jpg"  alt=""></li>
                     <li><img src="imagenes/familia-min.jpg"  alt=""></li>
                     <li><img src="imagenes/3.jpg "  alt=""></li>
                 
