--- a/parvularia/index.html
+++ b/parvularia/index.html
@@ -52,7 +52,7 @@
 
     <main class="main2">
         <div class="imagenpar">
-            <img src="imagenes/ARTE PARVULA copia.jpg" ><br>
+            <img src="imagenes/ARTE PARVULA copia-min.jpg" ><br>
             <main class="titutlopar">
                     <main class="titulorojo">
                         <h1>NUESTRA CARRERA</h1>
@@ -129,7 +129,7 @@
         <h1>DURACION 3 AÑOS</h1>
     </div>
     <div class="imagenpar2">
-        <img src="imagenes/ARTE DE TRANSITABILIDAD copia.png" alt="Imagen de Arte Parvula"><br>
+        <img src="imagenes/ARTE DE TRANSITABILIDAD-copia.png" alt="Imagen de Arte Parvula"><br>
         <div class="titutlopar2">
             <h1>CONVALIDACION DE TECNICO MEDIO A TECNICO SUPERIOR</h1><br>
             <p>
