--- a/parvularia/index.html
+++ b/parvularia/index.html
@@ -129,7 +129,7 @@
         <h1>DURACION 3 AÑOS</h1>
     </div>
     <div class="imagenpar2">
-        <img src="imagenes/ARTE DE TRANSITABILIDAD-copia.png" alt="Imagen de Arte Parvula"><br>
+        <img src="imagenes/ARTE DE TRANSITABILIDAD-copia-min.png" alt="Imagen de Arte Parvula"><br>
         <div class="titutlopar2">
             <h1>CONVALIDACION DE TECNICO MEDIO A TECNICO SUPERIOR</h1><br>
             <p>
