--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h4>DIRECCION</h4><br>
         
             <a href="https://www.google.com/maps/search/Av.+irala+N%C2%B0603,+1er+anillo+frente+a+digital+TV/@-17.7930609,-63.1864162,17z/data=!3m1!4b1?entry=ttu" target="_blank" class="ubicacion">
-                <i class="fa-solid fa-map-location"></i><p style="color: white;">Av.Irala N°603, 1er.anillo frente a Digital TV (Zona Exterminal)</p>
+                <i class="fa-solid fa-map-location"></i><p style="color: white;">Av.Irala N°603, 1er.anillo frente a Digital TV (Exterminal)</p>
 
             </a><br>
 
