--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav>
         <ul class="menu-horizontal">
-            <li><a href="../parvularia/index.html"><strong>PARVULARIA</strong></a></li>
+            <li><a href="../parvularia/pParvularia.html"><strong>PARVULARIA</strong></a></li>
             <li>
                 <a href="#"><strong>CAPACITACION EN</strong></a>
                     <ul class="menu-vertical"> 
