--- a/quienes_somos/pagina1.html
+++ b/quienes_somos/pagina1.html
@@ -42,7 +42,7 @@
         </ul> 
     </nav> 
     <div id="principal">
-    <img src="foto/instituto borrado copia.png" alt="Descripción de la imagen" width="100%" height="5%">
+    <img src="foto/instituto borrado copia.jpg" alt="Descripción de la imagen" width="100%" height="5%">
     </div>
         <div class="contiene">
             <div class="text">
