--- a/quienes_somos/pagina1.html
+++ b/quienes_somos/pagina1.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <header id="header">
-        <img src="foto/logo.png" class="logo" alt="Logo del Instituto">
+        <img src="foto/logo.png" class="logo" alt="" height="600px" width="250px">
         <input type="checkbox" id="menu" />
         <label for="menu">
-            <img src="foto/menu.png" class="menu-icono" alt="Menú">
+            <img src="foto/menu.png" class="menu-icono" alt="">
         </label>
+
         <ul class="menu">
             <li class="item"><a href="../index.html">INICIO</a></li>
             <li class="item"><a href="../quienes_somos/pagina1.html">QUIENES SOMOS</a></li>
@@ -37,11 +38,9 @@
             <li><a href="../idiomas/index.html"><strong>IDIOMAS</strong></a></li>      
         </ul> 
     </nav> 
-
     <div id="principal">
-        <img src="foto/instituto borrado copia.jpg" alt="Instituto Metropolitano">
+        <img src="foto/instituto borrado copia.jpg" alt="Descripción de la imagen">
     </div>
-
     <div class="contiene">
         <div class="text">
             <h2>Información</h2>
@@ -53,61 +52,104 @@
                 en Estimulación Temprana, Dificultades de Aprendizaje y Adaptaciones Curriculares. 
                 El instituto otorga becas de estudios a estudiantes menos favorecidos y participa en programas
                 de responsabilidad social, como el Programa Nacional de Alfabetización. Su enfoque es formar 
-                profesionales de alta calidad y contribuir al desarrollo educativo del país.
+                profesionales de alta calidad y contribuir al desarrollo de la sociedad, especialmente en el ámbito de la
+                primera infancia.
             </p>
         </div>
-        <div class="images">
-            <img src="foto/directora1.jpg" alt="Directora del Instituto">
+        <div class="images">             
+            <img src="foto/collage.png" alt="Imagen 2">
         </div>
     </div>
-
     <div id="misiones">
         <div class="mision">
-            <h3>Misión</h3>
-            <p>
-                Formar profesionales con valores éticos y sólidos conocimientos técnicos, que contribuyan al desarrollo social y educativo del país.
-            </p>
+            <h2>MISIÓN</h2>
+            <p>El Instituto Técnico Superior Metropolitano tiene como misión formar profesionales a nivel técnico superior con calidad y formación integral cuyas competencias respondan y satisfagan las demandas del mercado laboral y coadyuven al desarrollo Departamental y Nacional.</p>
         </div>
         <div class="vision">
-            <h3>Visión</h3>
-            <p>
-                Ser una institución líder en la formación de profesionales técnicos de excelencia, reconocida a nivel nacional e internacional.
-            </p>
+            <h2>VISIÓN</h2>
+            <p>El Instituto Técnico Superior Metropolitano tiene como su visión ser una institución educativa comprometida con una educación transformadora y de calidad, que incorpore un enfoque ético y de derecho en diversos ámbitos y espacios de la acción pedagógica para la primera infancia Liderando la formación de educadoras y educadores de párvulos.</p>
         </div>
     </div>
-
-    <div class="personal">
+    <div class="directorio">         
+        <h2>DIRECTORIO</h2>  
+    </div>
+    <div class="personal">    
         <div class="director">
-            <img src="foto/directora1.jpg" alt="Directora">
-            <h3>Directora</h3>
-            <p>Lic. Erika Saavedra</p>
+            <img src="foto/9.png" alt="Imagen 2">
+        </div>
+        <div class="director">
+            <img src="foto/12.png" alt="Imagen 2">
+        </div>
+    </div>
+    <div class="docentes">         
+        <h2>SECRETARIAS Y DISEÑADORA GRÁFICA</h2>  
+    </div>
+    <div class="personal">    
+        <div class="secredise">
+            <img src="foto/10.png" alt="Imagen 2">                  
         </div>
         <div class="secredise">
-            <img src="foto/docente2.jpg" alt="Secretaria">
-            <h3>Secretaria</h3>
-            <p>Lic. Maria Perez</p>
-        </div>
-        <div class="docente">
-            <img src="foto/docente1.jpg" alt="Docente">
-            <h3>Docente</h3>
-            <p>Lic. Juan Alvarez</p>
+            <img src="foto/11.png" alt="Imagen 2">                          
         </div>
     </div>
-
-    <footer>
-        <div class="footer">
-            <div id="izquierda">
-                <a href="#"><i class="fa fa-map-marker-alt"></i> Av. Libertador 1234</a>
-                <a href="#"><i class="fa fa-phone"></i> +591 70012345</a>
-                <a href="#"><i class="fa fa-envelope"></i> contacto@instituto.com</a>
-            </div>
-            <div id="derecha">
-                <a href="#"><i class="fa fa-facebook"></i> Facebook</a>
-                <a href="#"><i class="fa fa-instagram"></i> Instagram</a>
-                <a href="#"><i class="fa fa-twitter"></i> Twitter</a>
-            </div>
+    <div class="docentes">         
+        <h2>DOCENTES</h2>  
+    </div>
+    <div class="personal">    
+        <div class="docente">
+            <img src="foto/1.png" alt="Imagen 2">                  
         </div>
-        <p class="copi">© 2024 Instituto Técnico Superior METROPOLITANO. Todos los derechos reservados.</p>
+        <div class="docente">
+            <img src="foto/2.png" alt="Imagen 2">                          
+        </div>
+        <div class="docente">
+            <img src="foto/3.png" alt="Imagen 2">                  
+        </div>  
+        <div class="docente">
+            <img src="foto/4.png" alt="Imagen 2">                  
+        </div>  
+        <div class="docente">
+            <img src="foto/5.png" alt="Imagen 2">                  
+        </div>  
+        <div class="docente">
+            <img src="foto/6.png" alt="Imagen 2">                  
+        </div>  
+        <div class="docente">
+            <img src="foto/7.png" alt="Imagen 2">                  
+        </div>  
+    </div>  
+    <footer class="footer">
+        <div id="izquierda">
+            <br>
+            <h4>REDES SOCIALES</h4><br>
+            <a href="https://www.facebook.com/MetropolitanoInstituto/" target="_blank" class="facebook">
+                <i class="fa-brands fa-facebook"></i><p>Instituto Metropolitano</p>
+            </a><br>
+            <a href="https://wa.me/59167885407" target="_blank" class="whatsapp">
+                <i class="fa-brands fa-whatsapp"></i><p>67885407</p>
+            </a><br>
+            <a href="https://www.instagram.com/instituto_metropolitano/" target="_blank" class="instagram">
+                <i class="fa-brands fa-instagram"></i><p>instituto_metropolitano</p>
+            </a><br>
+            <a href="https://www.tiktok.com/@institutometropolitano1" target="_blank" class="tiktok">
+                <i class="fa-brands fa-tiktok"></i><p>institutometropolitano1</p>
+            </a>
+        </div>
+
+        <div id="derecha">
+            <br>
+            <h4>DIRECCIÓN</h4><br>
+            <a href="https://www.google.com/maps/search/Av.+irala+N%C2%B0603,+1er+anillo+frente+a+digital+TV/@-17.7930609,-63.1864162,17z/data=!3m1!4b1?entry=ttu" target="_blank" class="ubicacion">
+                <i class="fa-solid fa-map-location"></i><p>Av.Irala N°603, 1er.anillo (Zona Exterminal)</p>
+            </a><br>
+            <a href="https://mail.google.com/mail/u/0/?pli=1#search/metroplitano%40gmail.com?compose=new" target="_blank" class="ubicacion">
+                <i class="fa-solid fa-envelope"></i><p>metropolitano@gmail.com</p>
+            </a>
+        </div>
     </footer>
+    <div class="copi">
+        <p>©2021 Instituto Tecnico Superior Metropolitano</p>
+    </div> 
+    <script src="Script.js"></script>           
 </body>
 </html>
